--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -3,7 +3,7 @@
 }
 
 section {
-  background: white;
+  background: rgb(255, 255, 255);
   border-radius: 12px;
   padding: 2rem;
   margin-bottom: 2rem;
