add calendar component with routing, template, styles, and tests

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -6,7 +6,7 @@
         <ion-button fill="clear" class="menu-toggle" (click)="toggleSidebar()">
           <ion-icon name="menu" slot="icon-only"></ion-icon>
         </ion-button>
-        <div class="logo">CAYUDAI</div>
+        <div class="logo">CAYUDI</div>
       </div>
 
       <div class="header-center">
